testsuite/positive/bug-13283.n
using System;

class C1[T] where T : C1[T], new()
{
    public Prop : int { get; protected set }

    public static StM() : T
    {
        def a = T();
        a.Prop = 666;
        a
    }
}

class D1 : C1[D1] { }

module Program
{
  Main() : void
  {
    def d1 = D1.StM();
    Console.WriteLine(d1.Prop);
  }
}

/*
BEGIN-OUTPUT
666
END-OUTPUT
*/