testsuite/negative/where-constraints0.n
class ExpectStruct[T] where T : struct { }
class ExpectClass [T] where T : class  { }
class ExpectNew   [T] where T : new () { }

class X 
{
  private this () { }
  public this (_ : int) { }
}

class Q { }

_ = ExpectStruct.[int] (); // OK
_ = ExpectStruct.[string] (); // E: must be a value type
_ = ExpectClass.[string] (); // OK
_ = ExpectClass.[Q] (); // OK
_ = ExpectNew.[int] (); // OK
_ = ExpectNew.[Q] (); // OK
_ = ExpectNew.[string] (); // E: must have a public parameterless constructor
_ = ExpectNew.[System.Console] (); // E: must have a public parameterless constructor
_ = ExpectNew.[X] (); // E: must have a public parameterless constructor
